fixing aligned header

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -33,7 +33,7 @@
     --width-column-wide: 1180px;
     --width-column-regular: 40rem;
     --width-padded: 80vw;
-    --margin-left: 10vw;
+    --margin-left: 12vw;
     --width-padded-mobile: 90vw;
     --margin-left-mobile: 5vw;
 
